--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
     <title>Stencil Component Starter</title>
 
+   
+
     <script type="module" src="/build/storybook-stencil.esm.js"></script>
     <script nomodule src="/build/storybook-stencil.js"></script>
   </head>
   <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <!-- <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component> -->
+  <custom-chart chart-title="TEST"></custom-chart>
+
+  <!-- <custom-map></custom-map> -->
   </body>
 </html>
