--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
     <script nomodule src="/build/storybook-stencil.js"></script>
   </head>
   <body>
-    <!-- <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component> -->
+  
+    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
   <custom-chart chart-title="TEST"></custom-chart>
 
   <!-- <custom-map></custom-map> -->
